Prevents subscribe btn line wrapping

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -467,12 +467,13 @@ a:active {
 
   .btn-submit {
     width: 40%;
-    padding: 10.5px 20px !important;
+    padding: 10.5px 10px !important;
     position: absolute;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     top: 0;
     right: 0;
+    white-space: nowrap;
   }
 
   input {
@@ -484,7 +485,8 @@ a:active {
     border: none;
     padding-left: 15px;
     box-shadow: none;
-    display: table-cell;
+    // display: table-cell;
+    // display: inline-flex;
   }
 }
 
